tests/invalid/method_on_non_class/main.py
def run_case() -> None:
    x: int = 42

    x.foo()

if __name__ == "__main__":
    run_case()
